--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,7 @@ CMakeCache.txt
 CMakeFiles
 CMakeScripts
 Testing
-Makefile
+build.bat
 cmake_install.cmake
 install_manifest.txt
 compile_commands.json
