refactor code in prep for new features

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,9 @@
     "xmemory": "cpp",
     "xstddef": "cpp",
     "xtr1common": "cpp",
-    "xutility": "cpp"
+    "xutility": "cpp",
+    "list": "cpp",
+    "vector": "cpp",
+    "xhash": "cpp"
   }
 }
